syntax = "proto3";

package nft;

option go_package = "nftpb";
option java_multiple_files = true;
option java_outer_classname = "ServiceProto";
option java_package = "com.nft";

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

// NFTService let's you mint NFTs for a document 
service NFTService {
  rpc MintNFT(NFTMintRequest) returns (NFTMintResponse) {
    option (google.api.http) = {
      post: "/tokens/mint"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      description: "Mint an NFT from a Centrifuge Document"
    };
  }
}

message NFTMintRequest {
  // Document identifier
  string identifier = 1;
  // The contract address of the registry where the token should be minted
  string registry_address = 2;
  repeated string proof_fields = 4;
  string deposit_address = 5;
}

message NFTMintResponse {
  string token_id = 1;
}
